--- a/BreakingBad-main/breaking bad/html/BreakingBad.html
+++ b/BreakingBad-main/breaking bad/html/BreakingBad.html
@@ -24,9 +24,82 @@
 
             <p>Magyarországon a sorozat első évadja 2011. február 1-jétől volt látható az RTL Klub műsorán, 2012-ben a második, 2013-ban a harmadik évadot vetítették le. A sorozat utolsó két évada a Telenor MyTv szolgáltatásában, valamint az AXN közreműködésével a UPC MyPrime szolgáltatásában került megjelenésre 2015-ben. Ugyanebben az évben május 7-én a magyar AMC is elkezdte vetíteni, és 2016 júliusában itt is fejeződött be. </p>
         </div>
+
+
+        <style type="text/css">
+          .tg  {border-collapse:collapse;border-spacing:0;}
+          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
+          </style>
+          <table class="tg" style="table-layout: fixed; width: 394px">
+          <colgroup>
+          <col style="width: 50px">
+          <col style="width: 74px">
+          <col style="width: 136px">
+          <col style="width: 134px">
+          </colgroup>
+          <thead>
+            <tr>
+              <th class="tg-amwm" rowspan="2">Évad</th>
+              <th class="tg-amwm" rowspan="2">Epizódok</th>
+              <th class="tg-amwm" colspan="2">Eredeti bemutató</th>
+            </tr>
+            <tr>
+              <th class="tg-amwm">Premier</th>
+              <th class="tg-amwm">Finálé</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tg-amwm">1</td>
+              <td class="tg-amwm">7</td>
+              <td class="tg-amwm">2008.jan.20.</td>
+              <td class="tg-amwm">2008.márc.9</td>
+            </tr>
+            <tr>
+              <td class="tg-amwm">2</td>
+              <td class="tg-amwm">13</td>
+              <td class="tg-amwm">2009.márc.8</td>
+              <td class="tg-amwm">2009.máj.31</td>
+            </tr>
+            <tr>
+              <td class="tg-amwm">3</td>
+              <td class="tg-amwm">13</td>
+              <td class="tg-amwm">2010.márc.21</td>
+              <td class="tg-amwm">2010.jún.13</td>
+            </tr>
+            <tr>
+              <td class="tg-amwm">4</td>
+              <td class="tg-amwm">13</td>
+              <td class="tg-amwm">2011.júl.17</td>
+              <td class="tg-amwm">2011.okt.9</td>
+            </tr>
+            <tr>
+              <td class="tg-amwm" rowspan="2">5</td>
+              <td class="tg-amwm">8</td>
+              <td class="tg-amwm">2012.júl.15</td>
+              <td class="tg-amwm">2012.szept.2</td>
+            </tr>
+            <tr>
+              <td class="tg-amwm">8</td>
+              <td class="tg-amwm">2013.aug.11</td>
+              <td class="tg-amwm">2013.szept.29</td>
+            </tr>
+          </tbody>
+          </table>
+
+
+        <div>
+
           <button type="button" class="collapsible">1.Évad</button>
           <div class="content">
-            <p>Walter White, a középiskolai kémiatanár az 50. születésnapján megtudja, hogy gyógyíthatatlan tüdőrákban szenved. Élete egyébként sem a legtökéletesebb: tele van kihagyott lehetőségekkel, felesége éppen második gyermekükkel állapotos, fia pedig veleszületett rendellenesség miatt csak mankóval tud közlekedni. Mindezekre egy hatalmas kapuzárási pánik jön rá. Sógora, a drogelhárításnál dolgozó Hank Schrader születésnapi ajándékként elviszi az egyik bevetésükre, ahol meglepetten veszi észre egykori diákját, Jesse Pinkmant. Hazáig követi Jesse-t, ahol alkut ajánl neki: segítsen neki metamfetamint készíteni és terjeszteni, hogy az abból kapott pénzből segíthesse családját arra az esetre, ha meghalna - ha nem teszi, feladja a rendőrségen. Jesse, a tehetséges, de elveszett fiatal srác, kénytelen-kelletlen segít neki. A páros már az első metamfetamin-átadásán nagy bajba kerül, és embert is kénytelenek ölni. Miközben Hank fülest kap az újfajta, rendkívüli tisztaságú drogról, és terjesztőjéről, "Heisenberg"-ről, Skyler, Walter felesége is gyanakodni kezd. Hogy eloszlassa magáról a gyanút, az egész család előtt felfedi, hogy rákos, amivel kiváltja együttérzésüket. Régi barátai, a dúsgazdag Schwartz-házaspár is segíteni szeretnének, de ő sértettségből elutasítja ezt (múltbeli, tisztázatlan okokból). Ehelyett pénzt a kábítószergyártástól remél. Jessevel felkeresik Tuco Salamancát, a veszedelmes és pszichopatikus drogdílert, akinek csak nézeteltérések után tudják eladni az anyagot. Mivel hatalmas mennyiségre kapnak megrendelést, Walter és Jesse betörnek egy raktárba, ahonnét metil-amint szereznek, mellyel könnyedén és gyorsan tudnak nagy adagokat elkészíteni - cserébe a végeredmény világoskék színű lesz. Hiába szállítják le az árut, már ekkor látják, hogy Tucóval még lesz gondjuk...</p>
+            <p>Walter White, a középiskolai kémiatanár az 50. születésnapján megtudja, hogy gyógyíthatatlan tüdőrákban szenved. Élete egyébként sem a legtökéletesebb: tele van kihagyott lehetőségekkel, felesége éppen második gyermekükkel állapotos, fia pedig veleszületett rendellenesség miatt csak mankóval tud közlekedni. Mindezekre egy hatalmas kapuzárási pánik jön rá. Sógora, a drogelhárításnál dolgozó Hank Schrader születésnapi ajándékként elviszi az egyik bevetésükre, ahol meglepetten veszi észre egykori diákját, Jesse Pinkmant. Hazáig követi Jesse-t, ahol alkut ajánl neki: segítsen neki metamfetamint készíteni és terjeszteni, hogy az abból kapott pénzből segíthesse családját arra az esetre, ha meghalna - ha nem teszi, feladja a rendőrségen. Jesse, a tehetséges, de elveszett fiatal srác, kénytelen-kelletlen segít neki.</p>
+            <p>A páros már az első metamfetamin-átadásán nagy bajba kerül, és embert is kénytelenek ölni. Miközben Hank fülest kap az újfajta, rendkívüli tisztaságú drogról, és terjesztőjéről, "Heisenberg"-ről, Skyler, Walter felesége is gyanakodni kezd. Hogy eloszlassa magáról a gyanút, az egész család előtt felfedi, hogy rákos, amivel kiváltja együttérzésüket. Régi barátai, a dúsgazdag Schwartz-házaspár is segíteni szeretnének, de ő sértettségből elutasítja ezt (múltbeli, tisztázatlan okokból). Ehelyett pénzt a kábítószergyártástól remél.</p>
+            <p>Jessevel felkeresik Tuco Salamancát, a veszedelmes és pszichopatikus drogdílert, akinek csak nézeteltérések után tudják eladni az anyagot. Mivel hatalmas mennyiségre kapnak megrendelést, Walter és Jesse betörnek egy raktárba, ahonnét metil-amint szereznek, mellyel könnyedén és gyorsan tudnak nagy adagokat elkészíteni - cserébe a végeredmény világoskék színű lesz. </p>
+            <p>Hiába szállítják le az árut, már ekkor látják, hogy Tucóval még lesz gondjuk...</p>
           </div> 
           
           <button type="button" class="collapsible">2.Évad</button>
@@ -51,8 +124,11 @@
             <p>Hank az új nyomon elkezdi megfigyelni Waltert, akinek kiújul a rákja. Mivel nem tud ellene bizonyítékot szerezni, mert még Skyler is megtagadja a vallomástételt, úgy dönt, hogy megkörnyékezi Jesset, aki elkezdi szórni a pénzt. Walter elővigyázatosságból elássa a pénzét a sivatagban. Lydia tovább akarja folytatni a drogbizniszt, ezért Todd és Jack segítségével kezdenek bele újra a gyártásba. Jesse eleinte nem akar segíteni Hankéknek, sőt hamis személyazonossággal el akarja hagyni a várost, de amikor rájön, hogy Walter mérgezte meg Brockot, féktelen haragra gerjed. Dühében lelocsolja az egész házát benzinnel, amiben Hank akadályozza meg azzal, hogy azt mondja neki: azzal tud a legjobban kitolni Walterrel, ha segít nekik. Jesse belemegy, és először bepoloskázva kellene találkozniuk, de mégsem teszi meg, hanem fenyegetőzni kezdenek. Válaszul Walter ismét felbérli Jacket és bandáját, hogy öljék meg Jesset - cserébe csak annyit kérnek, hogy tanítsa meg Toddot metamfetamint készíteni. Hankék eljátsszák, hogy Jesse tudja, hol van elásva a pénz, amivel Walter akaratlanul is nyomra vezeti őket. A sivatag közepére autózik, ahol megjelenik Jesse, majd Hank is, aki letartóztatja Waltert. Ekkor váratlanul megjelennek a neonácik. Tűzpárbaj tör ki, aminek a végén megölik Hanket, egyetlen hordó kivételével lenyúlják Walter összes pénzét, Jesset pedig magukkal viszik rabszolgaként, hogy ő készítsen nekik drogot. Walter őrült módjára rohan haza, hogy elmeneküljön a családjával, ők azonban ellene fordulnak. Látván, hogy mindennek vége, előbb elintézi, hogy úgy tűnjön, mindenért ő volt a felelős és ő kényszerítette a családtagjait, majd új személyazonosságot vesz fel és az ország másik végébe vonul száműzetésbe a hegyekbe. Amikor egyszer megpróbálja felhívni a fiát telefonon, és ő is közli vele, hogy gyűlöli őt, a ráktól törődött állapotú Walter úgy dönt, feladja magát. Amikor azonban meglátja a tévében egy riportban, hogy Schwartzék letagadják az általa elért eredményeket, váratlanul meggondolja magát. Hazautazik Albuquerque-be, és először egy megrendezett bérgyilkossal fenyegetőzés útján eléri, hogy az utolsó hordó megmaradt pénzt Schwartzék juttassák el "tisztára mosva" adományként a fiának, amint nagykorú lesz. Ezután a ricin segítségével végez Lydiával, majd miután elbúcsúzik Skylertől, elmegy Jackék házához. Trükkel eléri, hogy beengedjék, majd egy saját maga által készített automata géppuskával végez mindenkivel. Jesse, akit alaposan megkínoztak fogvatartása során, előbb Toddal végez, majd Walterre fogja a pisztolyt de elsétál, amikor látja, hogy erre nincs szükség: a tűzharcban Waltert is halálos sérülés érte. Miközben Jesse a szabadság felé autózik és a rendőrség megrohamozza a neonácik főhadiszállását, Walter meghal az ott berendezett droglaborban - az egyetlen helyen, ahol igazán otthon érezte magát. </p>
           </div> 
 
+        </div>
+
+
      <footer>
-        <p>Készítette © Hajdu Benedek</p>
+        <p><b>Készítette © Hajdu Benedek</b></p>
      </footer>
      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
