--- a/BreakingBad-main/breaking bad/html/BreakingBad.html
+++ b/BreakingBad-main/breaking bad/html/BreakingBad.html
@@ -15,6 +15,7 @@
     <header>
         <img src="../img/Breaking_Bad_logo.svg.png" alt="Breaking Bad" id="logo">
     </header>
+    <main>
         <div>
             <p>A Totál szívás (eredeti angol címén <b>Breaking Bad</b>) Vince Gilligan által készített díjnyertes amerikai drámasorozat. A műsor az új-mexikói Albuquerque városában készült 2008 és 2013 között és története is ott játszódik. Főszereplője <i>Walter White</i> (Bryan Cranston) középiskolai kémiatanár, akinél előrehaladott stádiumú tüdőrákot állapítanak meg. Később úgy dönt, a bűn útjára lép és metamfetamin előállításába és eladásába kezd egy korábbi diákjával, <i>Jesse Pinkmannel</i> (Aaron Paul), hogy még halála előtt biztosíthassa családja anyagi jövőjét. A sorozat címe egy déli szlengből jön, melynek jelentése kb. "elszabadítani a poklot".A magyar cím egyrészt utal a szívásra, mint a drogozás egyik formájára, másrészt átvitt értelemben arra, hogy <i>Walter</i> egyre nagyobb kalamajkákba keveredik, mióta rossz útra tért.</p>
 
@@ -123,13 +124,10 @@
 
             <p>Hank az új nyomon elkezdi megfigyelni Waltert, akinek kiújul a rákja. Mivel nem tud ellene bizonyítékot szerezni, mert még Skyler is megtagadja a vallomástételt, úgy dönt, hogy megkörnyékezi Jesset, aki elkezdi szórni a pénzt. Walter elővigyázatosságból elássa a pénzét a sivatagban. Lydia tovább akarja folytatni a drogbizniszt, ezért Todd és Jack segítségével kezdenek bele újra a gyártásba. Jesse eleinte nem akar segíteni Hankéknek, sőt hamis személyazonossággal el akarja hagyni a várost, de amikor rájön, hogy Walter mérgezte meg Brockot, féktelen haragra gerjed. Dühében lelocsolja az egész házát benzinnel, amiben Hank akadályozza meg azzal, hogy azt mondja neki: azzal tud a legjobban kitolni Walterrel, ha segít nekik. Jesse belemegy, és először bepoloskázva kellene találkozniuk, de mégsem teszi meg, hanem fenyegetőzni kezdenek. Válaszul Walter ismét felbérli Jacket és bandáját, hogy öljék meg Jesset - cserébe csak annyit kérnek, hogy tanítsa meg Toddot metamfetamint készíteni. Hankék eljátsszák, hogy Jesse tudja, hol van elásva a pénz, amivel Walter akaratlanul is nyomra vezeti őket. A sivatag közepére autózik, ahol megjelenik Jesse, majd Hank is, aki letartóztatja Waltert. Ekkor váratlanul megjelennek a neonácik. Tűzpárbaj tör ki, aminek a végén megölik Hanket, egyetlen hordó kivételével lenyúlják Walter összes pénzét, Jesset pedig magukkal viszik rabszolgaként, hogy ő készítsen nekik drogot. Walter őrült módjára rohan haza, hogy elmeneküljön a családjával, ők azonban ellene fordulnak. Látván, hogy mindennek vége, előbb elintézi, hogy úgy tűnjön, mindenért ő volt a felelős és ő kényszerítette a családtagjait, majd új személyazonosságot vesz fel és az ország másik végébe vonul száműzetésbe a hegyekbe. Amikor egyszer megpróbálja felhívni a fiát telefonon, és ő is közli vele, hogy gyűlöli őt, a ráktól törődött állapotú Walter úgy dönt, feladja magát. Amikor azonban meglátja a tévében egy riportban, hogy Schwartzék letagadják az általa elért eredményeket, váratlanul meggondolja magát. Hazautazik Albuquerque-be, és először egy megrendezett bérgyilkossal fenyegetőzés útján eléri, hogy az utolsó hordó megmaradt pénzt Schwartzék juttassák el "tisztára mosva" adományként a fiának, amint nagykorú lesz. Ezután a ricin segítségével végez Lydiával, majd miután elbúcsúzik Skylertől, elmegy Jackék házához. Trükkel eléri, hogy beengedjék, majd egy saját maga által készített automata géppuskával végez mindenkivel. Jesse, akit alaposan megkínoztak fogvatartása során, előbb Toddal végez, majd Walterre fogja a pisztolyt de elsétál, amikor látja, hogy erre nincs szükség: a tűzharcban Waltert is halálos sérülés érte. Miközben Jesse a szabadság felé autózik és a rendőrség megrohamozza a neonácik főhadiszállását, Walter meghal az ott berendezett droglaborban - az egyetlen helyen, ahol igazán otthon érezte magát. </p>
           </div> 
-
+          
+          <p id="footer"><b>Készítette © Hajdu Benedek</b></p>
         </div>
-
-
-     <footer>
-        <p><b>Készítette © Hajdu Benedek</b></p>
-     </footer>
+      </main>
      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
       <script src="../javascript/style.js"></script> 
